--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <meta-data
             android:name="DB_MODELS"
-            android:value="com.example.victor.couchbaseorm.User" />
+            android:value="com.example.victor.couchbaseorm.User, com.example.victor.couchbaseorm.Chat" />
 
         <activity
             android:name=".MainActivity"
@@ -28,6 +28,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ChatActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
     </application>
 
 </manifest>
